<resources>
    <string name="app_name">Mock Music Player</string>
    <string name="title_library">Library</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_settings">Settings</string>
    <string name="title_store">Store</string>
    <string name="description_settings">In the Settings activity some available configurations for this app are displayed: Equalizer, Notifications, Sync Settings across devices, Library location etc. I need to use SharedPreferences, Equalizer, Storage Access and possible others API.</string>
    <string name="description_store">This is the Store of the App from where the user can browse an online store to purchase music. Setting up this activity will require WebView and Storage Access.</string>
    <string name="description_now_playing">This is the NowP laying section of the App. From this activity the user can control the song playback. In order to fully implement this activity, I can use the MediaPlayer API.</string>
    <string name="description_main">This is the main activity of the App. From this activity the user can navigate through the app in a consistent way. Other activities are started using explicit intents.</string>
    <string name="description_library">This is the Library that displays the available list of songs from the internal memory of the device. In order to implement this I need to use the Storage Access Framework.</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="unknown_song">Unknown song</string>
    <string name="general_settings">General settings</string>
    <string name="activate_background_sync">Activate background sync</string>
    <string name="enable_equalizer">Enable Equalizer</string>
    <string name="please_chose_one_of_the_following_options">Please chose one of the following options:</string>
    <string name="rebuilding_store">Store is under construction</string>
    <string name="store_downtime_explanation">When it will be finished, you will be able to buy music online and listen to it from the app.</string>
    <string name="cool_option">Cool option</string>
    <string name="awesome_option">Awesome option</string>
    <string name="super_option">Super option</string>
    <string name="turn_off_music_after">Turn off music after</string>

    <string-array name="SleepAfter">
        <item>never</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
    </string-array>
</resources>
