<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bogdanorzea.mockmusicplayer.MainActivity">

    <TextView
        style="@style/ExplanationText"
        android:text="@string/description_main" />

    <TextView style="@style/ExplanationSeparator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/library"
            style="@style/MainActivity_CategoryItem"
            android:drawableLeft="@drawable/ic_library_music_black_48dp"
            android:text="@string/title_library" />

        <TextView
            android:id="@+id/now_playing"
            style="@style/MainActivity_CategoryItem"
            android:drawableLeft="@drawable/ic_music_note_black_48dp"
            android:text="@string/title_now_playing" />

        <TextView
            android:id="@+id/store"
            style="@style/MainActivity_CategoryItem"
            android:drawableLeft="@drawable/ic_store_closed_icon_48dp"
            android:text="@string/title_store" />

        <TextView
            android:id="@+id/settings"
            style="@style/MainActivity_CategoryItem"
            android:drawableLeft="@drawable/ic_settings_input_composite_black_48dp"
            android:text="@string/title_settings"/>
    </LinearLayout>
</LinearLayout>
